# wikidata-filter

./: .gitignore  Cargo.toml  README.md  run.sh
src/: lib.rs  main.rs  output.rs  parser.rs
