[package]
name = "wikidata-head"
version = "0.1.0"
authors = ["Jun Ohtani <johtani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.1"
clap = "~2.33"
env_logger = "0.7.1"
log = "0.4.11"
serde = "1.0.115"
serde_derive ="1.0.115"
serde_json = "1.0.57"
futures = {version="0.3.5", features=["thread-pool"]}

[[bin]]
name = "wikidata-head"
path = "src/main.rs"